--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Courtesy Call</string>
     <string name="action_settings">Settings</string>
-    <string name="tab_title_alarm">alarms</string>
-    <string name="tab_title_call">call</string>
+    <string name="tab_title_alarm">Book call</string>
+    <string name="tab_title_call">Make call</string>
     <string name="tab_title_profile">profile</string>
     <string name="edit_alarm_delete_menu">Delete</string>
 </resources>
